[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/menu/characters.png" type="Texture" id=1]
[ext_resource path="res://assets/menu/label_continue.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/label_options.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/version.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/title.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/label_new_game.png" type="Texture" id=6]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=7]

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1246.0
margin_bottom = 688.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 537.0
margin_bottom = 608.0

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 537.0
margin_bottom = 129.0
texture = ExtResource( 5 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 537.0
margin_bottom = 542.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Continue" type="TextureButton" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 115.0
margin_right = 537.0
margin_bottom = 151.0
texture_normal = ExtResource( 2 )

[node name="NewGame" type="TextureButton" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 181.0
margin_right = 537.0
margin_bottom = 217.0
texture_normal = ExtResource( 6 )

[node name="Options" type="TextureButton" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 247.0
margin_right = 537.0
margin_bottom = 293.0
texture_normal = ExtResource( 3 )

[node name="Version" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 546.0
margin_right = 537.0
margin_bottom = 608.0
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 541.0
margin_right = 1126.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 26.0
margin_top = 134.0
margin_right = 559.0
margin_bottom = 473.0
texture = ExtResource( 1 )

[connection signal="button_down" from="HBoxContainer/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_button_down"]
